# dnd-web

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev.http  justfile  wenet-dnd_REDACTED.yaml
backend/dnd_back/: Cargo.toml
backend/dnd_back/src/: main.rs
frontend/dnd_front/: README.md  pubspec.yaml
frontend/dnd_front/lib/: app.dart  dnd_observer.dart  globals.dart  main.dart  routines.dart
frontend/dnd_front/lib/dnd/: dnd.dart
frontend/dnd_front/lib/dnd/cubit/: dnd_cubit.dart
frontend/dnd_front/lib/dnd/view/: dnd_page.dart  dnd_view.dart  login_page.dart  login_view.dart  routines_view.dart
frontend/dnd_front/lib/models/: login.dart  routines.dart
frontend/dnd_front/lib/routes/: all_routes.dart
frontend/dnd_front/lib/widgets/: login.dart  norms_editor.dart
frontend/dnd_front/test/: routines_test.dart  widget_test.dart
frontend/dnd_front/web/: index.html  manifest.json  privacy.txt  wenet_regions_mapping.json
