[package]
name = "dnd_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6.1"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "^1.0.137", features = ["derive"] }
dotenvy = "0.15.1"
reqwest = { version = "^0.11", features = ["json"] }
sha2 = "^0.10.2"
regex = "1.6.0"
flume = "0.10.13"
actix-session = { version = "0.7.1", features = ["actix", "cookie-session"] }
